# libssq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix
example/: example.c
include/: CMakeLists.txt
include/ssq/: CMakeLists.txt  a2s.h  buf.h  error.h  helper.h  packet.h  query.h  response.h  server.h  ssq.h  stream.h
include/ssq/a2s/: CMakeLists.txt  info.h  player.h  rules.h
include/ssq/server/: CMakeLists.txt  private.h  timeout.h
src/: CMakeLists.txt  buf.c  error.c  error.h  helper.h  packet.c  packet.h  query.c  query.h  response.c  response.h  server.c  server.h  ssq.c  stream.c  stream.h
src/a2s/: CMakeLists.txt  info.c  player.c  rules.c
tests/: CMakeLists.txt  README.md
tests/include/: helper.h
tests/src/: helper.c  test_buf.c  test_error.c  test_packet.c  test_packet.cc  test_response.c  test_ssq.c
tests/src/a2s/: test_info.c  test_player.c  test_rules.c
